Update README with project details and SQL schema